Pushed liked profiles to an array
Can now render a list of the profiles that have been liked.

--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ header {
 
 .paw-icon {
   width: 30%;
-  padding: 1em 0;
+  padding: .8em 0;
 }
 
 /* ---------------- MAIN CONTENT ------------------------- */
